samples/_failures_safe/1761428099_e10351_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d667dddd.c: In function ‘main’:
./samples/SAFE/__tmp_d667dddd.c:157:21: error: expected identifier or ‘(’ at end of input
  157 |                     for (int
      |                     ^~~
./samples/SAFE/__tmp_d667dddd.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d667dddd.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d667dddd.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d667dddd.c:157:21: error: expected declaration or statement at end of input
